# python-eventide

./: .dictionary  .gitignore  .isort.cfg  .style.yapf  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.stash/: __init__.py  constants.py  database.py  entity.py  entity_cache.py  eventide.py  exceptions.py  handler.py  message.py  message_store.py  projection.py  types.py  utils.py
eventide/: __init__.py  constants.py  database.py  entity_cache.py  errors.py  eventide.py  handler.py  message.py  message_store.py  messagedb.py  stream.py  types.py  utils.py
tasks/: __init__.py  build.py
tests/: test_stub.py
